Tools routes + create + list all + Views for new and index

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>Pages#home</h1>
 <p>Welcome to Mr Bricoloc!</p>
+<%= link_to 'Create new tool', new_tool_path %>
+<%= link_to 'View all tools', tools_path %>
