--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "avatar";
+@import "banner";
+@import "footer";
 @import "navbar";
+@import "search";
