--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,9 @@
 // Specific CSS for your home-page
+body {
+  background-color: black;
+  color: white;
+}
+
+.a .nav-link {
+  color: rgba(255, 255, 255, 0.5);
+}
