Pundit on tool - done with index, new and create

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -5,4 +5,7 @@
     <li><%= tool.name %></li>
   <% end %>
   </ul>
+  <% if policy(Tool).create? %>
+    <%= link_to "Add a new tool", new_tool_path, class: "btn btn-primary" %>
+  <% end %>
 </div>
