--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,6 @@
 </div>
 
 <div class="container">
-    <a class="btn btn-ghost" href="#">Create a new tool</a>
+<%# <div class="btn btn-ghost"><%= link_to 'View all tools', tools_path %></div> %>
+<%# <div class="btn btn-primary"><%= link_to 'View all bookings', bookings_path %></div> %>
 </div>
-
