--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,7 +2,7 @@
   <h1>List of all Bookings</h1>
   <ul>
   <% @bookings.each do |booking| %>
-    <li><%= booking.tool %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR</li>
+    <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR</li>
   <% end %>
   </ul>
 </div>
