Cloudinary - attached photo to tool and user models + updated new tool and user update forms

--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :description %>
     <%= f.input :daily_price %>
     <%= f.input :condition %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit "Submit", class: "btn btn-primary" %>
   <% end %>
 </div>
