front end changes
Tools list > added link to show
colors changes
container size change
button changes on Home

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,12 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+body {
+  background-color: $grey;
+  color: $grey3;
+}
+
+.container {
+  background-color: $light;
+}
