--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://images.unsplash.com/photo-1426927308491-6380b6a9936f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dG9vbHxlbnwwfDB8MHx8&auto=format&fit=crop&w=800&q=60);">
     <h1>Welcome to Mr.Bricoloc</h1>
     <p>Break the limitations to your inspiration </p>
@@ -12,7 +11,7 @@
       </div>
 </div>
 
-<div class="container">
-  <div class="btn btn-primary"><%= link_to 'View all tools', tools_path %></div>
-  <div class="btn btn-primary"><%= link_to 'View all bookings', bookings_path %></div>
+<div class="container w-75 p-3 d-flex justify-content-center">
+  <div class="m-2"><%= link_to 'View all tools', tools_path, :class => "btn btn-primary" %></div>
+  <div class="m-2"><%= link_to 'View all bookings', bookings_path, :class => "btn btn-primary" %></div>
 </div>
