--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: $gray;
+  background: $grey;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -7,14 +7,14 @@
   height: 100px;
   padding: 20px;
   margin-bottom: 10px;
-  color: rgba(250, 250, 250, 0.4);
+  color: $taupe;
 }
 .footer-links {
   display: flex;
   align-items: center;
 }
 .footer-links a {
-  color: rgba(250, 250, 250, 0.4);
+  color: $taupe;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
@@ -23,5 +23,5 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: white;
+  color: $taupe;
 }
