--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,16 +1,18 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: $gray;
+  background: $taupe;
   color: white;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+  margin: 0 16px;
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
-  height: 40px;
+  width: 70px;
+  height: 70px;
+  border-radius: 10px;
 }
 
 .avatar {
@@ -19,5 +21,5 @@
 }
 
 .navbar-lewagon .navbar-collapse .nav-link {
-  color: rgba(250, 250, 250, 0.4);
+  color: $light;
 }
