--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0a0a0a;
 $light-gray: #F4F4F4;
+$light: #fbfbf2;
+$grey: #e5e6e4;
+$grey2: #cfd2cd;
+$grey3: #a6a2a2;
+$taupe: #847577;
+
