minor adjustments to form

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Change the booking <%= @booking.id %> for this <%=@tool.name%></h1>
+  <h1>Change the booking for this <%=@tool.name%></h1>
   <%= simple_form_for [@tool, @booking] do |f| %>
     <%= f.input :date_begin %>
     <%= f.input :date_end %>
