--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,12 +1,21 @@
-<div class="container">
+<div class="container col-6 offset3">
 
-  <h2><%= @tool.name.capitalize %></h2>
-  <p>Category: <%= @tool.category %></p>
-  <p>Description: <%= @tool.description %></p>
-  <p>daily_price: <%= @tool.daily_price %></p>
-  <p>Condition: <%= @tool.condition %>/5</p>
+  <h2 class="text-center"><%= @tool.name.capitalize %></h2>
 
-  <%# <% if policy(Booking).create? %>
+  <div class="text">
+    <p>Category: <%= @tool.category %></p>
+    <p>Description: <%= @tool.description %></p>
+    <p>daily_price: <%= @tool.daily_price %></p>
+    <p>Condition: <%= @tool.condition %>/5</p>
+  </div>
+
+  <div class="tool_photo">
+    <%# photo_url %>
+  </div>
+
+  <%= link_to 'Back to list', tools_path, class: "btn btn-primary" %>
+
+  <% if policy(Booking).create? %>
   <%# <%= link_to "New booking", new_tool_booking_path %> %>
-  <%# <% end %> %> %>
+  <% end %>
 </div>
