scopes users-owners

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,9 +1,18 @@
 <div class="container">
-  <h1>List of all Bookings</h1>
+  <h1>Your Bookings</h1>
   <ul>
-  <% @bookings.each do |booking| %>
-    <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
-    <%= link_to "View", booking_path(booking) %></li>
-  <% end %>
+    <% @user_bookings.each do |booking| %>
+      <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
+      <%= link_to "View", booking_path(booking) %></li>
+    <% end %>
   </ul>
+
+  <h1>Bookings for Your Tools</h1>
+  <ul>
+    <% @owner_bookings.each do |booking| %>
+      <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
+      <%= link_to "View", booking_path(booking) %></li>
+    <% end %>
+  </ul>
+
 </div>
