--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1>Change the booking for this <%=@tool.name%></h1>
-  <%= simple_form_for [@tool, @booking] do |f| %>
+  <h1>Change the booking for this <%=@booking.tool.name%></h1>
+  <%= simple_form_for @booking do |f| %>
     <%= f.input :date_begin %>
     <%= f.input :date_end %>
     <%= f.input :status, collection: Booking::STATUSES%>
