--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -3,7 +3,7 @@
   <ul>
     <% @user_bookings.each do |booking| %>
       <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
-      <%= link_to "View", booking_path(booking) %></li>
+       - <%= booking.status %> <%= link_to "View", booking_path(booking) %></li>
     <% end %>
   </ul>
 
@@ -11,7 +11,7 @@
   <ul>
     <% @owner_bookings.each do |booking| %>
       <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
-      <%= link_to "View", booking_path(booking) %></li>
+      - <%= booking.status %> <%= link_to "View", booking_path(booking) %></li>
     <% end %>
   </ul>
 
