--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,5 +1,7 @@
-<div class="container">
-  <h1>List of all tools</h1>
+<div class="page-wrapper">
+  <div class="title pt-3 pb-3 mx-auto text-center">
+    <h1>Which tool do you need?</h1>
+  </div>
   <div class="cards-container">
     <div class="row">
       <% @tools.each do |tool| %>
