--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="page-wrapper">
   <h1>Change the booking for this <%=@booking.tool.name%></h1>
   <%= simple_form_for @booking do |f| %>
     <%= f.input :date_begin %>
