--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="page-wrapper">
   <h1>Book this <%=@tool.name%></h1>
   <%= simple_form_for [@tool, @booking] do |f| %>
     <%= f.input :date_begin %>
