--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row mt-5">
+<div class="page-wrapper">
+  <div class="row pt-5 pb-5">
     <div class="col-6 offset-3">
       <h2>Edit <%= resource_name.to_s.humanize %></h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
