--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row mt-5">
+<div class="page-wrapper">
+  <div class="row pt-5 pb-5">
     <div class="col-6 offset-3">
       <h2>Sign up</h2>
 
