--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Your Bookings</h1>
   <ul>
     <% @user_bookings.each do |booking| %>
-      <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
+      <li><%= booking.tool.name %> - from <%= booking.date_begin.strftime("%d/%m/%Y") %> to <%= booking.date_end.strftime("%d/%m/%Y") %> - <%= booking.total_price %> EUR
        - <%= booking.status %> <%= link_to "View", booking_path(booking) %></li>
     <% end %>
   </ul>
@@ -10,7 +10,7 @@
   <h1>Bookings for Your Tools</h1>
   <ul>
     <% @owner_bookings.each do |booking| %>
-      <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
+      <li><%= booking.tool.name %> - from <%= booking.date_begin.strftime("%d/%m/%Y") %> to <%= booking.date_end.strftime("%d/%m/%Y") %> - <%= booking.total_price %> EUR
       - <%= booking.status %> <%= link_to "View", booking_path(booking) %></li>
     <% end %>
   </ul>
