--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,8 @@
 <div class="page-wrapper">
   <h1>Book this <%=@tool.name%></h1>
   <%= simple_form_for [@tool, @booking] do |f| %>
-    <%= f.input :date_begin %>
-    <%= f.input :date_end %>
+    <%= f.input :date_begin, as: :date, html5: true %>
+    <%= f.input :date_end, as: :date, html5: true%>
     <%= f.submit "Submit", class: "btn btn-primary" %>
   <% end %>
 </div>
