--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
           <%= f.input :city,
                       required: true %>
           <%= f.input :date_of_birth,
-                      required: false %>
+                      required: false, as: :date, html5: true %>
           <%= f.input :password,
                       required: true,
                       hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
