--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Your Bookings</h1>
   <ul>
     <% @user_bookings.each do |booking| %>
-      <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
+      <li><i class="fas fa-trash"></i><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
        - <%= booking.status %> <%= link_to "View", booking_path(booking) %></li>
     <% end %>
   </ul>
@@ -10,8 +10,19 @@
   <h1>Bookings for Your Tools</h1>
   <ul>
     <% @owner_bookings.each do |booking| %>
-      <li><%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
-      - <%= booking.status %> <%= link_to "View", booking_path(booking) %></li>
+      <li>
+        <%= booking.tool.name %> - <%= booking.date_begin %> <%= booking.date_end %> - <%= booking.total_price %> EUR
+        - <%= booking.status %>
+        <%= link_to booking_path(booking) do %>
+          <i class="fas fa-eye"></i>
+        <% end %>
+        <%= link_to booking_path(booking) do %>
+          <i class="fas fa-check"></i>
+        <% end %>
+        <%= link_to booking_path(booking) do %>
+          <i class="fas fa-times"></i>
+        <% end %>
+      </li>
     <% end %>
   </ul>
 
