--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,8 +12,24 @@
 </div>
 
 <div class="page-wrapper">
-  <div class="d-flex justify-content-center" style="height: 100px">
-    <div class="m-2"><%= link_to 'View all tools', tools_path, :class => "btn btn-primary" %></div>
-    <div class="m-2"><%= link_to 'View all bookings', bookings_path, :class => "btn btn-primary" %></div>
+  <div class="d-flex justify-content-center m-4">
+    <h1>Most popular tools</h1>
+  </div>
+  <div class="cards-container">
+      <% @tools.each do |tool| %>
+            <%= link_to tool_path(tool) do %>
+              <div class="card-trip">
+                <%= cl_image_tag tool.photo.key %>
+                <div class="card-trip-infos">
+                  <div>
+                    <h2><%= tool.name %></h2>
+                    <p><%= tool.description %></p>
+                  </div>
+                <h2 class="card-trip-pricing"><%= tool.daily_price %> €</h2>
+                <%= cl_image_tag(tool.user.photo.key, :class => "card-trip-user avatar-bordered") %>
+                </div>
+              </div>
+            <% end %>
+      <% end %>
   </div>
 </div>
