--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-wrapper">
   <div class="title pt-3 pb-3 mx-auto text-center">
-    <h1>Which tool do you need?</h1>
+    <h1>Results for "Drill"</h1>
   </div>
   <div class="cards-container">
       <% @tools.each do |tool| %>
