--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,37 +1,73 @@
 <div class="page-wrapper">
-  <h1>Your Bookings</h1>
-  <ul>
-    <% @user_bookings.each do |booking| %>
-      <li>
-        <%= booking.tool.name %> - from <%= booking.date_begin.strftime("%d/%m/%Y") %> to <%= booking.date_end.strftime("%d/%m/%Y") %> - <%= booking.total_price %> EUR
-        - <%= booking.status %>
-        <%= link_to booking_path(booking) do %>
-          <i class="fas fa-eye"></i>
-        <% end %>
-        <%= link_to edit_booking_path(booking) do %>
-          <i class="fas fa-times"></i>
-        <% end %>
-      </li>
-    <% end %>
-  </ul>
-
-  <h1>Bookings for Your Tools</h1>
-  <ul>
-    <% @owner_bookings.each do |booking| %>
-      <li>
-        <%= booking.tool.name %> - from <%= booking.date_begin.strftime("%d/%m/%Y") %> to <%= booking.date_end.strftime("%d/%m/%Y") %> - <%= booking.total_price %> EUR
-        - <%= booking.status %>
-        <%= link_to booking_path(booking) do %>
-          <i class="fas fa-eye"></i>
-        <% end %>
-        <%= link_to edit_booking_path(booking) do %>
-          <i class="fas fa-check"></i>
-        <% end %>
-        <%= link_to edit_booking_path(booking) do %>
-          <i class="fas fa-times"></i>
-        <% end %>
-      </li>
-    <% end %>
-  </ul>
-
+<h1>Welcome, <%=current_user.first_name%></h1>
+<div class="cards-container">
+  <div class = "list-container">
+    <h2>Your Bookings</h2>
+      <% @user_bookings.each do |booking| %>
+              <div class="card-for-list">
+                <%= cl_image_tag booking.tool.photo.key %>
+                <div class="card-for-list-infos">
+                    <h2><%= booking.tool.name %></h2>
+                    <p>from <%= booking.date_begin.strftime("%d/%m/%Y") %> to <%= booking.date_end.strftime("%d/%m/%Y") %></p>
+                    <h2 class="card-for-list-pricing"><%= booking.total_price %> €
+                    <%= booking.status %>
+                <%= link_to booking_path(booking) do %>
+                    <i class="fas fa-eye"></i>
+                  <% end %>
+                <%= link_to edit_booking_path(booking) do %>
+                    <i class="fas fa-check"></i>
+                  <% end %>
+                <%= link_to edit_booking_path(booking) do %>
+                     <i class="fas fa-times"></i>
+                 <% end %>
+                  </h2>
+                  </div>
+                </div>
+      <% end %>
+  </div>
+  <div class = "list-container">
+  <h2>Bookings for Your Tools</h2>
+      <% @owner_bookings.each do |booking| %>
+              <div class="card-for-list">
+                <%= cl_image_tag booking.tool.photo.key %>
+                <div class="card-for-list-infos">
+                    <h2><%= booking.tool.name %></h2>
+                    <p>from <%= booking.date_begin.strftime("%d/%m/%Y") %> to <%= booking.date_end.strftime("%d/%m/%Y") %></p>
+                    <h2 class="card-for-list-pricing"><%= booking.total_price %> €
+                    <%= booking.status %>
+                <%= link_to booking_path(booking) do %>
+                    <i class="fas fa-eye"></i>
+                  <% end %>
+                <%= link_to edit_booking_path(booking) do %>
+                    <i class="fas fa-check"></i>
+                  <% end %>
+                <%= link_to edit_booking_path(booking) do %>
+                     <i class="fas fa-times"></i>
+                 <% end %>
+                  </h2>
+                  </div>
+                </div>
+      <% end %>
+  </div>
+<div class = "list-container">
+      <h2>Your toolbox</h2>
+      <% @owner_tools.each do |tool| %>
+              <div class="card-for-list">
+                <%= cl_image_tag tool.photo.key %>
+                <div class="card-for-list-infos">
+                    <h2><%= tool.name %></h2>
+                    <p><%= tool.description %></p>
+                    <h2 class="card-for-list-pricing"><%= tool.daily_price %> €
+                <%= link_to tool_path(tool) do %>
+                    <i class="fas fa-eye"></i>
+                  <% end %>
+                <%= link_to edit_tool_path(tool) do %>
+                    <i class="fas fa-check"></i>
+                  <% end %>
+                  </h2>
+                  </div>
+                </div>
+      <% end %>
+  </div>
+</div>
 </div>
