--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,9 @@
                 <div class="card-trip-infos">
                   <div>
                     <h2><%= tool.name %></h2>
-                    <p><%= tool.description %></p>
+                    <div class="text-description">
+                      <p><%= tool.description %></p>
+                    </div>
                   </div>
                 <h2 class="card-trip-pricing"><%= tool.daily_price %> €</h2>
                 <%= cl_image_tag(tool.user.photo.key, :class => "card-trip-user avatar-bordered") %>
