--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,8 +1,8 @@
 <div class="page-wrapper">
-<h1>Welcome, <%=current_user.first_name%></h1>
+<h1 style = 'text-align: center'>Welcome, <%=current_user.first_name%></h1>
 <div class="cards-container">
   <div class = "list-container">
-    <h2>Your Bookings</h2>
+    <h2 class="list-container-title">Your Bookings</h2>
       <% @user_bookings.each do |booking| %>
               <div class="card-for-list">
                 <%= cl_image_tag booking.tool.photo.key %>
@@ -26,7 +26,7 @@
       <% end %>
   </div>
   <div class = "list-container">
-  <h2>Bookings for Your Tools</h2>
+  <h2 class="list-container-title">Bookings for Your Tools</h2>
       <% @owner_bookings.each do |booking| %>
               <div class="card-for-list">
                 <%= cl_image_tag booking.tool.photo.key %>
@@ -50,13 +50,12 @@
       <% end %>
   </div>
 <div class = "list-container">
-      <h2>Your toolbox</h2>
+      <h2 class="list-container-title">Your toolbox</h2>
       <% @owner_tools.each do |tool| %>
               <div class="card-for-list">
                 <%= cl_image_tag tool.photo.key %>
                 <div class="card-for-list-infos">
                     <h2><%= tool.name %></h2>
-                    <p><%= tool.description %></p>
                     <h2 class="card-for-list-pricing"><%= tool.daily_price %> €
                 <%= link_to tool_path(tool) do %>
                     <i class="fas fa-eye"></i>
