--- a/app/assets/stylesheets/pages/_tool-show.scss
+++ b/app/assets/stylesheets/pages/_tool-show.scss
@@ -1,14 +1,23 @@
 .booking-tool {
   background-color: rgba($color: white , $alpha: 0.7);
-  border-radius: 15px;
+  border-radius: 8px;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
   text-align: center;
 }
 
 .tool-photo img {
-  width: 100%;
-  height: 200px;
-  border-radius: 10px;
+  height: 420px;
+  border-radius: 8px;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  object-fit: cover;
+}
+
+.pictures-tool {
+  display: flex;
+}
+
+.small-pics img {
+  width: 150px;
+  margin-bottom: 8px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
