--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,13 +1,15 @@
 .btn-ghost {
-  color: rgb(10, 10, 10);
-  border: 1px solid rgb(10, 10, 10);
+  color: $taupe;
+  border: 1px solid $taupe;
   padding: 8px 24px;
   border-radius: 50px;
-  font-weight: lighter;
-  opacity: 0.6;
+  font-weight: bold;
+  opacity: 1;
   transition: opacity 0.3s ease;
 }
 
 .btn-ghost:hover {
+  background-color: $taupe;
   opacity: 1;
+  color: white;
 }
