index tools - mapbox

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -21,4 +21,12 @@
             <% end %>
       <% end %>
   </div>
+  <div class="map-box-container">
+    <% @markers = @tools.geocoded.map do |tool| %>
+        <% { %>
+          <%= lat: tool.latitude, %>
+          <%= lng: tool.longitude %>
+        <% } %>
+      <% end %>
+  </div>
 </div>
