--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   </div>
   <div class="wrapper">
-    <div class="cards-container">
+    <div class="cards-container search-results">
         <% @tools.each do |tool| %>
               <%= link_to tool_path(tool) do %>
                 <div class="card-trip">
