--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -5,8 +5,8 @@
       <span class="calendar-title btn btn-primary"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
       <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: 'btn btn-outline-primary' %>
     </div>
-    <%=# link_to 'Book the tool', new_tool_booking_path(params[:tool_id]), class: 'btn btn-outline-warning' %>
   </div>
+</div>
 
   <table class="table table-striped">
     <thead>
