mise en forme pop up fenêtres map

--- a/app/assets/stylesheets/components/_card-tool.scss
+++ b/app/assets/stylesheets/components/_card-tool.scss
@@ -56,7 +56,7 @@
   grid-gap: 16px;
 }
 
-.cards-container .search-results {
+#search-results {
   width: 65vw;
   grid-template-columns: 1fr 1fr;
   flex-grow: 1;
