--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -26,22 +26,13 @@
   }
 }
 
-.mapboxgl-popup {
-  max-width: 200px;
-}
-
-.mapboxgl-popup-content {
-  text-align: center;
-  font-family: "Open Sans", sans-serif;
-}
-
-.mapboxgl-ctrl-attrib-inner a {
+.mapboxgl-ctrl-attrib-inner {
   text-decoration: none;
 }
 
-.mapbox-improve-map {
-  text-decoration: none;
-}
+// .mapbox-improve-map {
+//   text-decoration: none;
+// }
 
 a.mapboxgl-ctrl-logo {
   display: none;
