--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,11 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
+$red: #C1121F;
+$blue: #003049;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #3c6e71;
 $gray: #0a0a0a;
 $light-gray: #F4F4F4;
 $light: #fbfbf2;
