--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div class="wrapper">
-    <div class="cards-container search-results">
+    <div class="cards-container" id="search-results">
       <% @tools.each do |tool| %>
         <%= link_to tool_path(tool) do %>
           <div class="card-trip">
