--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 @import "banner";
 @import "button";
 @import "footer";
+@import "info-window";
 @import "map";
 @import "navbar";
 @import "search";
