--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -13,3 +13,13 @@
   opacity: 1;
   color: white;
 }
+
+.cancel-link {
+  text-decoration: none;
+  padding: 15px;
+  font-size: 16px;
+}
+.cancel-link:hover {
+  opacity: 1;
+  text-decoration: underline;
+}
