--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
                       input_html: { autocomplete: "new-password" } %>
         </div>
 
-        <div class="form-actions btn btn-primary">
+        <div class="form-actions btn btn-ghost">
           <%= f.button :submit, "Sign up" %>
         </div>
       <% end %>
